Solve overlow issue in Chrome
In Chrome, when changing the site from /about to /login, the scrollbar appears despite setting the "overflow-x: hidden" property. The solution was to change the overflow location from the body to the new created div.

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@ html {
     box-sizing: border-box;
 }
 
-*,
 *:before,
 *:after {
     box-sizing: inherit;
@@ -16,21 +15,14 @@ html {
 
 body {
     position: relative;
-    margin: 0;
     min-height: 100%;
-    font-family: "Helvetica Neue", Arial, sans-serif;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
-html,
-body {
-    height: 100%;
-}
-
-body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mainStyles {
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .registration-result-dialog .mat-dialog-container {
